--- a/test-have-weight.ipynb
+++ b/test-have-weight.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,9 +136,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert weights\n",
+    "paddle_model = convert(torch_model, paddle_model)\n",
+    "\n",
+    "# check correctness\n",
+    "x = np.random.randn(2, 3, 224, 224).astype('float32')\n",
+    "x_paddle = paddle.to_tensor(x)\n",
+    "x_torch = torch.Tensor(x).to(device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-1.1773, -0.6774, -0.7573, -1.3865, -0.0806, -0.5413,  0.1252, -0.3625,\n",
+      "          0.5254, -1.2392, -0.3171, -1.8559,  0.2038,  0.1487],\n",
+      "        [-0.1378, -1.5847, -0.6044,  0.6300, -1.3258, -2.8848, -1.9151, -2.0975,\n",
+      "         -0.7097, -1.5312,  0.7107,  1.9582, -2.4988,  1.5837],\n",
+      "        [-0.7401, -1.8067, -0.7765,  1.1386,  0.0215, -1.5315,  0.1295, -0.7527,\n",
+      "         -0.9552, -0.7494, -1.5780, -0.2543, -0.2353, -1.2985],\n",
+      "        [-1.5885, -0.7127,  0.3731, -1.5609,  2.2374, -0.0874, -0.2325, -0.7098,\n",
+      "          1.4446,  1.7226, -0.9152,  0.4734,  2.4674, -1.7448],\n",
+      "        [-0.6068,  0.4891,  0.1386, -1.0947, -0.3319,  2.3550,  0.2976,  0.1998,\n",
+      "          0.0323, -0.2740, -0.5816, -0.7407,  0.2390, -0.5712]],\n",
+      "       grad_fn=<SliceBackward0>)\n",
+      "tensor([-0.0670,  1.3199, -0.9743,  0.9939, -1.0772], grad_fn=<SliceBackward0>)\n",
+      "LayerNorm((384,), eps=1e-05, elementwise_affine=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "out_torch = torch_model(x_torch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(shape=[5, 14], dtype=float32, place=CPUPlace, stop_gradient=False,\n",
+      "       [[-1.17422783, -0.67863894, -0.75977337, -1.38296187, -0.08453023,\n",
+      "         -0.54227579,  0.12237574, -0.36927927,  0.51981890, -1.23737621,\n",
+      "         -0.31640667, -1.86094725,  0.20431000,  0.14495680],\n",
+      "        [-0.13842249, -1.58719802, -0.60550010,  0.63185263, -1.33303630,\n",
+      "         -2.88414693, -1.91392028, -2.10013199, -0.71307099, -1.53035414,\n",
+      "          0.70702964,  1.95371425, -2.50320244,  1.57943487],\n",
+      "        [-0.74086303, -1.81200075, -0.77822685,  1.13973689,  0.02199420,\n",
+      "         -1.53317940,  0.13101058, -0.75560260, -0.95734674, -0.75512314,\n",
+      "         -1.57757545, -0.25386286, -0.23552293, -1.30169845],\n",
+      "        [-1.58804917, -0.71441519,  0.37347370, -1.56388450,  2.23283029,\n",
+      "         -0.08465839, -0.23329382, -0.71348417,  1.44600916,  1.71990228,\n",
+      "         -0.91834116,  0.46952003,  2.46424270, -1.74293053],\n",
+      "        [-0.60827297,  0.48698103,  0.13649459, -1.09423935, -0.33783397,\n",
+      "          2.35964251,  0.30032071,  0.19525884,  0.03410980, -0.27920943,\n",
+      "         -0.58044672, -0.74175489,  0.23328954, -0.57067674]])\n",
+      "Tensor(shape=[5], dtype=float32, place=CPUPlace, stop_gradient=False,\n",
+      "       [ 0.43393368, -0.90783948, -0.02651245, -0.02070370, -1.01891363])\n",
+      "LayerNorm(normalized_shape=[384], epsilon=1e-05)\n"
+     ]
+    }
+   ],
+   "source": [
+    "out_paddle = paddle_model(x_paddle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor(shape=[5, 14], dtype=float32, place=CPUPlace, stop_gradient=False,\n",
+      "       [[-1.17422783, -0.67863894, -0.75977337, -1.38296187, -0.08453023,\n",
+      "         -0.54227579,  0.12237574, -0.36927927,  0.51981890, -1.23737621,\n",
+      "         -0.31640667, -1.86094725,  0.20431000,  0.14495680],\n",
+      "        [-0.13842249, -1.58719802, -0.60550010,  0.63185263, -1.33303630,\n",
+      "         -2.88414693, -1.91392028, -2.10013199, -0.71307099, -1.53035414,\n",
+      "          0.70702964,  1.95371425, -2.50320244,  1.57943487],\n",
+      "        [-0.74086303, -1.81200075, -0.77822685,  1.13973689,  0.02199420,\n",
+      "         -1.53317940,  0.13101058, -0.75560260, -0.95734674, -0.75512314,\n",
+      "         -1.57757545, -0.25386286, -0.23552293, -1.30169845],\n",
+      "        [-1.58804917, -0.71441519,  0.37347370, -1.56388450,  2.23283029,\n",
+      "         -0.08465839, -0.23329382, -0.71348417,  1.44600916,  1.71990228,\n",
+      "         -0.91834116,  0.46952003,  2.46424270, -1.74293053],\n",
+      "        [-0.60827297,  0.48698103,  0.13649459, -1.09423935, -0.33783397,\n",
+      "          2.35964251,  0.30032071,  0.19525884,  0.03410980, -0.27920943,\n",
+      "         -0.58044672, -0.74175489,  0.23328954, -0.57067674]])\n",
+      "Tensor(shape=[5], dtype=float32, place=CPUPlace, stop_gradient=False,\n",
+      "       [ 0.43393368, -0.90783948, -0.02651245, -0.02070370, -1.01891363])\n",
+      "LayerNorm(normalized_shape=[384], epsilon=1e-05)\n"
+     ]
+    },
     {
      "ename": "AssertionError",
      "evalue": "",
@@ -146,7 +251,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9808/1897632003.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mfile_debug\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mout_torch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout_paddle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0matol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1e-5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;31m# save weights for paddle model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16688/169347419.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mfile_debug\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mout_torch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout_paddle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0matol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1e-5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;31m# save weights for paddle model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
@@ -155,15 +260,7 @@
     "\n",
     "\n",
     "\n",
-    "# convert weights\n",
-    "paddle_model = convert(torch_model, paddle_model)\n",
     "\n",
-    "# check correctness\n",
-    "x = np.random.randn(2, 3, 224, 224).astype('float32')\n",
-    "x_paddle = paddle.to_tensor(x)\n",
-    "x_torch = torch.Tensor(x).to(device)\n",
-    "\n",
-    "out_torch = torch_model(x_torch)\n",
     "out_paddle = paddle_model(x_paddle)\n",
     "\n",
     "out_torch = out_torch.data.cpu().numpy()\n",
